Added extent reports on API and Appium

--- a/test-output/ApiTestResults.html
+++ b/test-output/ApiTestResults.html
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title></title>
+<title>Title of the com.parallel.universe.base.Report Comes here</title>
 <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
 <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@b00a2d0486596e73dd7326beacf352c639623a0e/commons/img/logo.png">
 <link href="https://cdn.jsdelivr.net/gh/extent-framework/extent-github-cdn@d6562a79075e061305ccfdb82f01e5e195e2d307/spark/css/spark-style.css" rel="stylesheet" />
@@ -32,10 +32,10 @@
 </ul>
 <ul class="nav-right">
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary"></span></a>
+<a href="#"><span class="badge badge-primary">Name of the com.parallel.universe.base.Report Comes here</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Nov 28, 2023 02:59:34 AM</span></a>
+<a href="#"><span class="badge badge-primary">Dec 13, 2023 03:16:12 AM</span></a>
 </li>
 </ul>
 </div>
@@ -74,14 +74,14 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="2"
+        <li class="test-item"  status="pass" test-id="1"
           author=""
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">Open SauceDemo</p>
+            <p class="name">Verifying Test</p>
             <p class="text-sm">
-              <span>2:59:36 AM</span> / <span>00:00:03:218</span>
+              <span>3:16:20 AM</span> / <span>00:00:02:479</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,15 +89,15 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">Open SauceDemo</h5>
-<span class='badge badge-success'>11.28.2023 2:59:36 AM</span>
-<span class='badge badge-danger'>11.28.2023 2:59:39 AM</span>
-<span class='badge badge-default'>00:00:03:218</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
+<h5 class="test-status text-pass">Verifying Test</h5>
+<span class='badge badge-success'>12.13.2023 3:16:20 AM</span>
+<span class='badge badge-danger'>12.13.2023 3:16:22 AM</span>
+<span class='badge badge-default'>00:00:02:479</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
-<div class="m-t-10 m-l-5">Test to validate Valid Credentials</div>
+<div class="m-t-10 m-l-5">Test to validate correct scenario </div>
 </div>
 </div><div class="detail-body mt-4">
 <table class="table table-sm">
@@ -105,16 +105,16 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>2:59:36 AM</td>
+        <td>3:16:20 AM</td>
         <td>
-          Starting test case testThree
+          Starting test of API Dashboard layout
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>2:59:39 AM</td>
+        <td>3:16:22 AM</td>
         <td>
-          testThree Passed
+          API Dashboard layout test successful
         </td>
       </tr>
   </tbody>
@@ -136,13 +136,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Nov 28, 2023 02:59:34 AM</h3>
+<h3>Dec 13, 2023 03:16:12 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Nov 28, 2023 02:59:39 AM</h3>
+<h3>Dec 13, 2023 03:17:00 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -212,10 +212,32 @@
 </div></div>
 <script>
 var timeline = {
-"Open SauceDemo":3.218
+"Verifying Test":2.479
 };
 </script>
 <div class="row">
+<div class="col-lg-6 col-md-12 sysenv-container">
+<div class="card">
+<div class="card-header"><p>System/Environment</p></div>
+<div class="card-body pb-0 pt-0"><table class="table table-sm table-bordered">
+<thead><tr class="bg-gray"><th>Name</th><th>Value</th></tr></thead>
+<tbody>
+<tr>
+<td>Host Name</td>
+<td>Full Stack QA</td>
+</tr>
+<tr>
+<td>Environment</td>
+<td>Automation Testing API</td>
+</tr>
+<tr>
+<td>User Name</td>
+<td>Ariz Hussain Siddiqui</td>
+</tr>
+</tbody>
+</table></div>
+</div>
+</div>
 </div>
 </div>
 <script>
