Added Readme file

--- a/test-output/WebTestResults.html
+++ b/test-output/WebTestResults.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Name of the com.parallel.universe.base.Report Comes here</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Dec 13, 2023 04:01:21 PM</span></a>
+<a href="#"><span class="badge badge-primary">Dec 21, 2023 03:39:48 AM</span></a>
 </li>
 </ul>
 </div>
@@ -75,14 +75,14 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="1"
+        <li class="test-item"  status="pass" test-id="2"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Open SauceDemo</p>
             <p class="text-sm">
-              <span>4:01:31 PM</span> / <span>00:00:02:988</span>
+              <span>3:39:58 AM</span> / <span>00:00:02:741</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -91,10 +91,10 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Open SauceDemo</h5>
-<span class='badge badge-success'>12.13.2023 4:01:31 PM</span>
-<span class='badge badge-danger'>12.13.2023 4:01:34 PM</span>
-<span class='badge badge-default'>00:00:02:988</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
+<span class='badge badge-success'>12.21.2023 3:39:58 AM</span>
+<span class='badge badge-danger'>12.21.2023 3:40:01 AM</span>
+<span class='badge badge-default'>00:00:02:741</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
@@ -106,14 +106,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:01:31 PM</td>
+        <td>3:39:58 AM</td>
         <td>
           Starting test loginTest
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:01:34 PM</td>
+        <td>3:40:01 AM</td>
         <td>
           Sauce Demo, Login Successful with title verify
         </td>
@@ -123,14 +123,14 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="fail" test-id="2"
+        <li class="test-item"  status="fail" test-id="3"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Open SauceDemo</p>
             <p class="text-sm">
-              <span>4:01:38 PM</span> / <span>00:00:01:079</span>
+              <span>3:40:09 AM</span> / <span>00:00:01:025</span>
               <span class="badge fail-bg log float-right">Fail</span>
             </p>
           </div>
@@ -139,10 +139,10 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-fail">Open SauceDemo</h5>
-<span class='badge badge-success'>12.13.2023 4:01:38 PM</span>
-<span class='badge badge-danger'>12.13.2023 4:01:39 PM</span>
-<span class='badge badge-default'>00:00:01:079</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
+<span class='badge badge-success'>12.21.2023 3:40:09 AM</span>
+<span class='badge badge-danger'>12.21.2023 3:40:10 AM</span>
+<span class='badge badge-default'>00:00:01:025</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
@@ -154,14 +154,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:01:38 PM</td>
+        <td>3:40:09 AM</td>
         <td>
           Starting test loginTestFailed
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log fail-bg">Fail</span></td>
-        <td>4:01:39 PM</td>
+        <td>3:40:10 AM</td>
         <td>
           Sauce Demo, Login UnSuccessful because of wrong title
         </td>
@@ -171,14 +171,14 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="pass" test-id="3"
+        <li class="test-item"  status="pass" test-id="5"
           author=""
           tag=""
           device="">
           <div class="test-detail">
             <p class="name">Open SauceDemo</p>
             <p class="text-sm">
-              <span>4:01:44 PM</span> / <span>00:00:03:146</span>
+              <span>3:40:20 AM</span> / <span>00:00:02:240</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -187,10 +187,10 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">Open SauceDemo</h5>
-<span class='badge badge-success'>12.13.2023 4:01:44 PM</span>
-<span class='badge badge-danger'>12.13.2023 4:01:48 PM</span>
-<span class='badge badge-default'>00:00:03:146</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
+<span class='badge badge-success'>12.21.2023 3:40:20 AM</span>
+<span class='badge badge-danger'>12.21.2023 3:40:23 AM</span>
+<span class='badge badge-default'>00:00:02:240</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=5</span>
 <span class='badge badge-default pointer float-right ml-1 et'><i class="fa fa-chevron-down"></i></span>
 <span class='badge badge-default pointer float-right ct'><i class="fa fa-chevron-up"></i></span>
 </div>
@@ -202,14 +202,14 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log info-bg">Info</span></td>
-        <td>4:01:44 PM</td>
+        <td>3:40:20 AM</td>
         <td>
           Starting test loginTest
         </td>
       </tr>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:01:48 PM</td>
+        <td>3:40:23 AM</td>
         <td>
           Sauce Demo, Login Successful with title verify
         </td>
@@ -233,13 +233,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Dec 13, 2023 04:01:21 PM</h3>
+<h3>Dec 21, 2023 03:39:48 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Dec 13, 2023 04:01:54 PM</h3>
+<h3>Dec 21, 2023 03:40:30 AM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -309,7 +309,7 @@
 </div></div>
 <script>
 var timeline = {
-"Open SauceDemo":2.988,"Open SauceDemo":1.079,"Open SauceDemo":3.146
+"Open SauceDemo":2.741,"Open SauceDemo":1.025,"Open SauceDemo":2.24
 };
 </script>
 <div class="row">
